login using id number, issue #1

--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -35,11 +35,11 @@
 </script>
 
 {% if remaining %}
-<div class="modal fade" style="vertical-align: middle;" id="chp-sbmt" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" style="vertical-align: middle;" id="chp-sbmt" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="myModalLabel">סיום פרק</h3>
+        <h3 class="modal-title" id="modal-title">סיום פרק</h3>
       </div>
       <div class="modal-body" style="font-size: 105%;">
         <p>פעולה זו שולחת את הפרק להגשה ומיד לאחריה יהיה ניתן לראות את הציון. נותרו לך <b>{{remaining}} נסיונות</b> הגשה.</p>
