added group help page

--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -64,6 +64,7 @@
         </select>
         </div>
         </div>
+        <a class="text-muted small" target="_blank" href="{% url 'logic:group-help' %}"><u>מה זה מספר קבוצה?</u></a>
       </div>
       <div class="modal-footer">
         <form method="post" id="register-form" action="/accounts/register/">{% csrf_token %}
