disabled dismiss modal and fixed submission check

--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -43,7 +43,7 @@
 
 {% if first_time %}
 <button class="btn btn-primary btn-lg" style="display: none;" id="first-btn" data-toggle="modal" data-target="#first-time"></button>
-<div class="modal fade" style="vertical-align: middle;" id="first-time" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+<div class="modal fade"  data-keyboard="false" data-backdrop="static" style="vertical-align: middle;" id="first-time" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
