--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -17,7 +17,7 @@
       {% if followup %}<a href='{% url 'logic:question' chapter.number question.number %}' class="btn btn-default silent btn-lg">חזרה</a>{% endif %}
       <button class="btn btn-default btn-lg" id="answer">אישור</button>
       <button class="btn btn-default {% if question.has_followup %}silent{% else %}answered{% endif %} btn-lg" {% if answer and question.has_followup %}onclick="location.href='{% url 'logic:followup' chapter.number question.number %}';"{% else %}style="display: none;"{% endif %} id="next">{% if question.has_followup %}המשך{% else %}שאלה הבאה{% endif %}</button>
-      <button class="btn btn-primary btn-lg" style="display: {% if complete %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#chp-sbmt">סיום פרק</button>
+      <button class="btn btn-primary btn-lg" style="display: {% if can_submit %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#chp-sbmt">סיום פרק</button>
     </div>
   </div>
 </div>
@@ -35,7 +35,7 @@
 </script>
 
 {% if remaining %}
-<div class="modal fade" style="vertical-align: middle;" id="chp-sbmt" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+<div class="modal fade" data-keyboard="false" data-backdrop="static" style="vertical-align: middle;" id="chp-sbmt" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
