--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -216,7 +216,7 @@ input[type=text], textarea {
   border: 1px solid #ddd;
 }
 
-input[type=text]:focus {
+input[type=text]:focus, textarea:focus {
   box-shadow: 0 0 2px #ccc;
   border: 1px solid #ccc;
 }
