--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -36,7 +36,7 @@
           <td>
             <div class="btn-group" role="group" style="font-size: 130%; display: inline;">
               <label class="label label-default" style="opacity: 0.7; margin: -1px; display: {% if answer %}none{% else %}inline{% endif %};" id='t{{forloop.parentloop.counter}}{{forloop.counter}}' onclick="select('t', '{{forloop.parentloop.counter}}{{forloop.counter}}')">T</label>
-              <label class="label" style="display: {% if answer %}inline{% else %}none{% endif %}; color: black;" id='ans{{forloop.parentloop.counter}}{{forloop.counter}}' onclick="unselect('{{forloop.parentloop.counter}}{{forloop.counter}}')">{% if answer %}{{answer|index:forloop.counter0|index:forloop.parentloop.counter0}}{% endif %}</label>
+              <label class="label" style="display: {% if answer %}inline{% else %}none{% endif %}; color: #333;" id='ans{{forloop.parentloop.counter}}{{forloop.counter}}' onclick="unselect('{{forloop.parentloop.counter}}{{forloop.counter}}')">{% if answer %}{{answer|index:forloop.counter0|index:forloop.parentloop.counter0}}{% endif %}</label>
               <label class="label label-default" style="opacity: 0.7; margin: -1px; display: {% if answer %}none{% else %}inline{% endif %};" id='f{{forloop.parentloop.counter}}{{forloop.counter}}' onclick="select('f', '{{forloop.parentloop.counter}}{{forloop.counter}}')">F</label>
             </div>
           </td>
