--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -42,7 +42,7 @@
     <button class="btn btn-default dd-btn" id="arb">arb</button>
     {% endif %}
     <button class="btn btn-default dd-btn" id="rep">rep</button>
-    <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash" style="margin-top: 6px;"></span></button>
+    <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash trash"></span></button>
   </div>
   <div class="noselect text-center" id="extra" style="display: none; margin-top: 15px;">
     <div>
