--- a/frege/logic/templates/logic/model.html
+++ b/frege/logic/templates/logic/model.html
@@ -8,7 +8,7 @@
 {% block hint %}
 יש להזין ערכים מופרדים בפסיק, ערך בודד, או להשאיר את השדה ריק עבור קבוצה ריקה.
 {% endblock hint %}
-{% block hint_link %}מידע נוסף{% endblock %}
+{% block hint_link %}הסבר נוסף{% endblock %}
 
 {% block question_content %}
 
