--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -107,9 +107,9 @@ input:-webkit-autofill {
 }
 
 .formal-dsp {
-    font-size: 160%;
+    font-size: 175%;
     margin-top: -30px;
-    color: #222;
+    color: #333;
 }
 
 .mono {
@@ -182,6 +182,9 @@ input:-webkit-autofill {
 .sym-btn:hover {
   background-color: #ddd;
 }
+.trash {
+    margin-top: 7px;
+}
 
 /* hypothesis vertical line */
 .dd-hyp {
@@ -247,6 +250,16 @@ input[type=text]:focus, textarea:focus {
 ::-moz-selection {
   background: #a8d1ff; /* Gecko Browsers */
 }
+
+/* ********************************* */
+.verticalLine {
+    border-left: 1px solid #aaa;
+    float: left;
+    margin-left: 50%;
+    height: 42px;
+}
+/* ********************************* */
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
