--- a/frege/logic/templates/logic/user.html
+++ b/frege/logic/templates/logic/user.html
@@ -15,14 +15,22 @@
         הגשת עד כה {{chaptersubmission_list|length}} פרקים.
       </p>
       <table class="table table-condensed">
+        <thead>
+          <tr>
+            <th style="text-align: right;">פרק</th>
+            <th style="text-align: right;">ציון</th>
+          </tr>
+        </thead>
+        <tbody>
         {% for sub in chaptersubmission_list %}
-        <tr>
-          <td>
-            <a href='{% url 'logic:chapter' sub.chapter.number %}'>פרק {{sub.chapter.number}}</a>
-          </td>
-          <td>{{sub.percent_correct}}%</td>
-        <tr>
+          <tr>
+            <td>
+              <a href='{% url 'logic:chapter' sub.chapter.number %}'>פרק {{sub.chapter.number}}</a>
+            </td>
+            <td>{{sub.percent_correct}}</td>
+          <tr>
         {% endfor %}
+        </tbody>
       </table>
     {% else %}
       <p>עוד לא הגשת אף פרק. <a href="{% url 'logic:index' %}">קדימה לעבודה!</a></p>
