a tiny margin for stats link

--- a/frege/logic/templates/logic/index.html
+++ b/frege/logic/templates/logic/index.html
@@ -18,7 +18,7 @@
         {% endif %}
     {% endfor %}
     </div>
-    <a class="text-muted" href="{% url 'logic:stats' %}" target="_blank">
+    <a class="text-muted" href="{% url 'logic:stats' %}" target="_blank" style="margin-right: 3px;">
       <span class="glyphicon glyphicon-stats"></span> סטטיסטיקה
     </a>
   </div>
