--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -54,7 +54,7 @@
       <input type="text" id="ftxt" style="padding-left: 3px;" size="32" maxlength="30" autocorrect="off" autocapitalize="none">
       <label for="ftxt" id="ftxtLbl" style="margin-left: 8px;"></label>
     </div>
-    <div>
+    <div id="extbtns">
       <input type="button" class="btn sym-btn" id="neg" value="~"/>
       <input type="button" class="btn sym-btn" id="con" value="·"/>
       <input type="button" class="btn sym-btn" id="dis" value="∨"/>
