--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -156,7 +156,7 @@ input:-webkit-autofill {
 /* Deduction */
 
 .dd-num {
-    padding-right: 5px;
+    padding-right: 12px;
 }
 .dd-just {
     opacity: 0.55;
@@ -191,6 +191,7 @@ input:-webkit-autofill {
    height: 100%; 
    border-left: 2px solid #777; 
    padding-left: 10px;
+   margin-left: 8px;
 }
 
 /* end of hypothesis horizontal dash */
@@ -205,6 +206,10 @@ input:-webkit-autofill {
   position:absolute; 
   bottom:0px;
   left:0px;
+}
+
+.dd-arb {
+  margin-left: -25px;
 }
 
 /* Input */
