added deduction hint and style change;

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -3,6 +3,11 @@
 
 {% block question_text %}נתון הטיעון:<p class="text-center formal formal-dsp">{{question.display}}</p>{% endblock %}
 {% block question_instruction %}הוכחה בדדוקציה טבעית{% endblock %}
+{% block hint %}
+יש להגיע למסקנה באמצעות הפעלת כללי דדוקציה. שימו לב כי המסקנה חייבת להופיע בשורה האחרונה.
+{% endblock hint %}
+{% block hint_link %}הסבר נוסף{% endblock %}
+
 
 {% block question_content %}
 
