--- a/frege/logic/templates/logic/stats.html
+++ b/frege/logic/templates/logic/stats.html
@@ -15,6 +15,8 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
+
+{% if num_sub > 0%}
       <h3>כללי</h3>
       <p>
         סך כל ההגשות: {{num_sub}}<br>
@@ -33,6 +35,11 @@
         <span class="glyphicon glyphicon-stats"></span> פרק {{number}}
       </a><br>
       {% endfor %}
+
+{% else %}
+<p>אין נתונים.</p>
+{% endif %}
+
     </div>
   </div>
 
