--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block question_text %}נתון הטיעון:<p class="text-center formal formal-dsp">{{question.display}}</p>{% endblock %}
-{% block question_instruction %}הוכחה בדדוקציה טבעית{% endblock %}
+{% block question_instruction %}הוכחה בדדוקציה{% endblock %}
 {% block hint %}
 יש להגיע למסקנה באמצעות הפעלת כללי דדוקציה. שימו לב כי המסקנה חייבת להופיע בשורה האחרונה.
 {% endblock hint %}
