--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -57,7 +57,7 @@
 $(document).ready(function() {
     $('[data-toggle="tooltip"]').tooltip(); 
     $("#about").click(function() {
-        $("#about").html('<a class="text-muted" data-toggle="tooltip" title="קישור לקוד מקור" target="_blank" href="https://github.com/eliranhaze/frege2">פותח על ידי אלירן חזיזה</a> עבור אוניברסיטת תל אביב');
+        $("#about").html('פותח על ידי אלירן חזיזה עבור אוניברסיטת תל אביב');
     });
 });
 </script>
