--- a/frege/logic/templates/logic/user.html
+++ b/frege/logic/templates/logic/user.html
@@ -26,7 +26,7 @@
         {% for sub in chaptersubmission_list %}
           <tr>
             <td>
-              <a href='{% url 'logic:chapter' sub.chapter.number %}'>{{sub.chapter}}</a>
+              <a href='{% url 'logic:chapter' sub.chapter.chnum %}'>{{sub.chapter}}</a>
             </td>
             <td>{% if sub.is_ready %}{{sub.percent_correct}}{% else %}בבדיקה...{% endif %}</td>
             <td class="text-muted">{{sub.time}}</td>
