--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -56,7 +56,7 @@
     <div id="inp">
       <button class="btn btn-default" id="txtCnl"><span class="glyphicon glyphicon-remove"></span></button>
       <button class="btn btn-primary" id="txtOk"><span class="glyphicon glyphicon-ok"></span></button>
-      <input type="text" id="ftxt" style="padding-left: 3px;" size="32" maxlength="30" autocorrect="off" autocapitalize="none">
+      <input type="text" id="ftxt" style="padding-left: 3px;" size="32" maxlength="30" autocorrect="off" autocapitalize="none" autocomplete="off" spellcheck="false">
       <label for="ftxt" id="ftxtLbl" style="margin-left: 8px;"></label>
     </div>
     <div id="extbtns">
