changed default title

--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-config" content="/static/logic/images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title>{% block title %}Frege rulz{% endblock %} | לוגיקה</title>
+    <title>{% block title %}frege{% endblock %} | לוגיקה</title>
 
     <link href="{% static 'logic/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'logic/bootstrap/css/bootstrap-paper.min.css'%}" rel="stylesheet">
