--- a/frege/logic/templates/logic/user.html
+++ b/frege/logic/templates/logic/user.html
@@ -24,13 +24,15 @@
         </thead>
         <tbody>
         {% for sub in chaptersubmission_list %}
+          {% if sub.is_complete %}
           <tr>
             <td>
               <a href='{% url 'logic:chapter' sub.chapter.chnum %}'>{{sub.chapter}}</a>
             </td>
-            <td>{% if sub.is_ready %}{{sub.percent_correct}}{% else %}בבדיקה...{% endif %}</td>
-            <td class="text-muted">{{sub.time}}</td>
+            <td>{% if sub.ongoing %}-{% elif sub.is_ready %}{{sub.percent_correct}}{% else %}בבדיקה...{% endif %}</td>
+            <td class="text-muted">{% if sub.ongoing %}נסיון נוסף - עוד לא הוגש{% else %}{{sub.time}}{% endif %}</td>
           <tr>
+          {% endif %}
         {% endfor %}
         </tbody>
       </table>
