--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -6,7 +6,7 @@
 
 <div class="container" style="max-width: 500px;">
   <div class="page-header">
-    <h2>כניסה</h2>
+    <h2></h2>
   </div>
   <div class="panel panel-default">
   <div class="panel-body">
@@ -27,9 +27,10 @@
     </div>
 
     <form class="form-signin" method="post" id="login-form">{% csrf_token %}
-      <label for="id_username">מספר ת.ז.</label>
-      <input type="text" id="id_username" value="{{username}}" name="username" class="form-control" autofocus autocorrect="off" autocapitalize="none">
-      <input type="hidden" id="id_password" name="password">
+      <label for="id_username">שם משתמש</label>
+      <input type="text" id="id_username" value="{{username}}" name="username" class="form-control txtIn" autofocus autocorrect="off" autocapitalize="none">
+      <label for="id_password">סיסמה</label>
+      <input type="password" id="id_password" name="password" class="form-control txtIn" autocorrect="off" autocapitalize="none">
       <div>
         <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 20px; font-size: 130%;">
           התחברות
@@ -101,11 +102,9 @@ $(document).ready(function() {
 $(document).ready(function() {
     $("#login-form").submit(function(e) {
         $("#errors").empty();
-        if (!$.trim($("#id_username").val())) {
-            $("#errors").text("נא להזין מספר ת.ז.");
+        if (!$.trim($("#id_username").val()) || !$.trim($("#id_password").val())) {
+            $("#errors").text("נא להזין שם משתמש וסיסמה");
             e.preventDefault();
-        } else {
-            $("#id_password").val($("#id_username").val());
         }
     });
 });
